@@ -1,3 +1,13 @@
+Sat Nov 18 11:16:07 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
+
+ - server/upsd.c: add MAXINIT parameter to upsd.conf to make the time upsd waits
+   for the DUMPDONE to complete configurable and try to (re)connect to a UPS, before
+   declaring it stale, instead of the other way around.
+ - server/conf.c: add MAXINIT parameter and MAXAGE must be greater than zero
+ - lib/libupsconfig.ch: add MAXINIT parameter
+ - conf/upsd.conf: add MAXINIT parameter
+ - man/upsd.conf.5: add MAXINIT parameter
+
 Thu Aug 31 15:07:00 UTC 2006 / Jonathan Dion <dion.jonathan@gmail.com>
 
  - drivers/mains.c : some bugs corrected
